flag-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flag-service
  namespace: togglemaster

spec:
  replicas: 2

  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: flag-service

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: flag-service

    spec:
      containers:
      - name: flag-service

        image: 523694734848.dkr.ecr.us-east-1.amazonaws.com/flag-service:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8002

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8002
          initialDelaySeconds: 30
          periodSeconds: 10
