analytics-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: analytics-service
  namespace: togglemaster

spec:
  selector:
    app: analytics-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8005

  type: ClusterIP
