evaluation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster

spec:
  selector:
    app: evaluation-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8004

  type: ClusterIP
