flag-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flag-service
  namespace: togglemaster

spec:

  selector:
    app: flag-service

  ports:

  - protocol: TCP
    port: 8002
    targetPort: 8002

  type: ClusterIP
