targeting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: togglemaster
spec:
  selector:
    app: targeting-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
